# muse_smc

./: .gitlab-ci.yml  CMakeLists.txt  package.xml
muse/: CMakeLists.txt  package.xml
muse/cmake/: muse_extras.cmake
muse/src/: test_compile.cpp
muse_amcl/: CMakeLists.txt  package.xml
muse_amcl/cmake/: The page you're looking for could not be found (404).html  add_unit_test.cmake  muse_amcl-extras.cmake  muse_amcl_add_unit_test_gtest.cmake  muse_amcl_add_unit_test_rostest.cmake  muse_amcl_extras.cmake  muse_amcl_open_mp.cmake
muse_amcl/dev/: structure.dia
muse_amcl/msg/: ParticleSet.msg  ParticleSetMsg.msg
muse_amcl/python/: generate_multivariate_distribution_2d.py  plot_filter_state_log.py  weighted.py
muse_amcl/scripts/: build_with_optimization.sh  generate_multivariate_distribution_2d.py
muse_amcl/src/: muse_amcl_node.cpp  sensor_model.cpp
muse_amcl/src/examples/: distance_transform.cpp  eval_angle_normalization.cpp  eval_functional.cpp  eval_locking_times.cpp  eval_particle_clustering.cpp  eval_particle_set_access_times.cpp  exam_bounding_boxes.cpp  exam_map_line_iterator.cpp  exam_particle_set.cpp  exam_polygons.cpp  exam_signals.cpp  exam_test_mock.cpp  exam_tf_interpolation.cpp  exam_time_ordered_queue.cpp  exam_visualise_distributions.cpp  example_signals.cpp  test_mock.cpp  visualise_distributions.cpp
muse_amcl/src/factories/: data_provider_factory.cpp  (+3 more)
muse_amcl/test/: test_angle.cpp  test_bounding_rectangle.cpp  test_buffered_vector.cpp  test_clustering.test  test_covariance.cpp  test_distribution.cpp  test_distribution.hpp  test_distribution.test  test_distribution_500.yaml  test_distribution_5000.yaml  test_index.cpp  test_indexation.cpp  test_node_clustering.cpp  test_node_distribution.cpp  test_node_particle_set.cpp  test_node_tf_provider.cpp  test_particle_set.cpp  test_particle_set.test  test_pose_distribution_a_1000.yaml  test_pose_generators.cpp  test_random.cpp  test_signals.cpp
muse_amcl_core_plugins/: CMakeLists.txt  package.xml  plugins.xml
muse_amcl_core_plugins/test/: gridmap_providers.test  map_providers.test  sampling_normal_2d.test  sampling_uniform_primary.test  sampling_uniform_primary_map_2d.test  test_map.hpp  test_map_provider.hpp  test_node_gridmap.cpp  test_node_gridmap_particles.cpp  test_node_gridmap_providers.cpp  test_node_odometry.cpp  test_node_sampling_normal_2d.cpp  test_node_sampling_uniform_all_maps_2d.cpp  test_node_sampling_uniform_primary_map_2d.cpp  test_normal_2d.hpp  test_sampling_uniform_primary_map_2d.cpp  test_uniform_all_maps_2d.hpp  test_uniform_primary_map_2d.hpp
muse_amcl_launch/: CMakeLists.txt  package.xml
muse_amcl_launch/launch/: gridmap_test.launch  mock.launch  rawseeds.launch  sand.launch
muse_mcl_2d/: CMakeLists.txt  package.xml  plugins.xml  weight_plot.hpp
muse_mcl_2d/msg/: SampleSetMsg.msg
muse_mcl_2d/src/: clustering_impl.hpp  compilation.cpp  muse_mcl_2d_node.h  muse_mcl_node.h  particle_filter.cpp  particle_filter.hpp  state_publisher.cpp  state_publisher.h
muse_mcl_2d/test/: perf_runtimes_math_operations.cpp  perf_runtimes_particle_iteration.cpp  runtimes_iteration.cpp  runtimes_math_op.cpp  test_bounding_box2d.cpp  test_transform2d.cpp  transform_2d_legacy.hpp
muse_mcl_2d_gridmaps/: CMakeLists.txt  package.xml  plugins.xml
muse_mcl_2d_gridmaps/test/: perf_runtimes_distance_transform.cpp  perf_runtimes_exp.cpp  perf_runtimes_get_range.cpp  perf_runtimes_line_iterator.cpp
muse_mcl_2d_laser/: CMakeLists.txt  package.xml  plugins.xml
muse_mcl_2d_launch/: CMakeLists.txt  package.xml
muse_mcl_2d_launch/launch/: rawseeds.launch  rawseeds_ndt.launch  rawseeds_sick_front.launch
muse_mcl_2d_mapping/: CMakeLists.txt  package.xml
muse_mcl_2d_mapping/config/: cartographer_2d.lua
muse_mcl_2d_mapping/launch/: cartographer.launch  cartographer_offline.launch  insert_tf.launch  maize.launch  rawseeds.launch  sand.launch
muse_mcl_2d_mapping/src/: grid_mapper_node.cpp  grid_mapper_node.h  grid_mapper_node_2d.cpp  grid_mapper_node_2d.h  mapper.cpp  mapper.h  measurement_2d.hpp  measurement_3d.hpp  ndt_grid_mapper.cpp  ndt_grid_mapper.h  ndt_grid_mapper_2d.cpp  ndt_grid_mapper_2d.h  ndt_grid_mapper_3d.cpp  ndt_grid_mapper_3d.h  ndt_mapper.cpp  ndt_mapper.h  occupancy_grid_mapper.cpp  occupancy_grid_mapper.h  occupancy_grid_mapper_2d.cpp  occupancy_grid_mapper_2d.h  occupancy_grid_mapper_node.cpp  occupancy_grid_mapper_node.h
muse_mcl_2d_ndt/: CMakeLists.txt  package.xml  plugins.xml
muse_mcl_2d_odometry/: CMakeLists.txt  package.xml  plugins.xml
muse_mcl_2d_resampling/: CMakeLists.txt  package.xml  plugins.xml
muse_mcl_2d_resampling/src/: kld_2d.cpp  kld_2d.h  residual_2d.cpp  stratified_2d.cpp  systematic_2d.cpp  wheel_2d.cpp
muse_mcl_2d_sampling/: CMakeLists.txt  package.xml  plugins.xml
muse_mcl_2d_sampling/src/: normal_2d.cpp  normal_2d.h  uniform_all_maps_2d.cpp  uniform_all_maps_2d.h  uniform_primary_map_2d.cpp
muse_mcl_2d_stereo/: CMakeLists.txt  package.xml  plugins.xml
muse_mcl_2d_vectormaps/: CMakeLists.txt  package.xml  plugins.xml
muse_mcl_core_plugins/: CMakeLists.txt  package.xml  plugins.xml
muse_mcl_core_plugins/test/: gridmap_providers.test  sampling_normal_2d.test  sampling_uniform_all_maps_2d.test  sampling_uniform_primary_map_2d.test  test_map.hpp  test_map_provider.hpp  test_node_gridmap.cpp  test_node_gridmap_particles.cpp  test_node_gridmap_providers.cpp  test_node_sampling_normal_2d.cpp  test_node_sampling_uniform_all_maps_2d.cpp  test_node_sampling_uniform_primary_map_2d.cpp  test_normal_2d.hpp  test_uniform_all_maps_2d.hpp  test_uniform_primary_map_2d.hpp
muse_mcl_launch/: CMakeLists.txt  package.xml
muse_mcl_launch/launch/: gridmap_test.launch  rawseeds.launch  rawseeds_sick_front.launch  sand.launch
muse_smc/: CMakeLists.txt  package.xml
muse_smc/cmake/: muse_smc_add_unit_test_gtest.cmake  muse_smc_add_unit_test_rostest.cmake  muse_smc_extras.cmake  muse_smc_openmp.cmake  muse_smc_show_headers.cmake
muse_smc/scripts/: build_with_optimization.sh  plot_csv_log.py  random_sampling_vector.py
muse_smc/src/: test_compile.cpp
(+1067 files in other folders)
