<?xml version="1.0"?>
<package>
  <name>muse_amcl</name>
  <version>0.0.0</version>
  <description>The muse_amcl package</description>

  <maintainer email="richard.hanten@uni-tuebingen.de">hanten</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>cslibs_indexed_storage</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>tinyxml</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>cslibs_indexed_storage</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
