<?xml version="1.0"?>
<package>
  <name>muse_amcl_core_plugins</name>
  <version>0.0.0</version>
  <description>The muse_amcl_core_plugins package</description>

  <maintainer email="richard.hanten@uni-tuebingen.de">hanten</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cslibs_kdtree</build_depend>
  <build_depend>muse_amcl</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>cslibs_kdtree</run_depend>
  <run_depend>muse_amcl</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <export>
    <muse_amcl plugin="${prefix}/plugins.xml" />
  </export>
</package>
