<?xml version="1.0"?>
<package>
  <name>muse_amcl_launch</name>
  <version>0.0.0</version>
  <description>The muse_amcl_launch package contains files for the muse amcl project.</description>

  <maintainer email="richard.hanten@uni-tuebingen.de">hanten</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>muse_amcl</build_depend>
  <build_depend>muse_amcl_core_plugins</build_depend>
  <run_depend>muse_amcl</run_depend>
  <run_depend>muse_amcl_core_plugins</run_depend>
  <export>
  </export>
</package>
